docs/7.57/md/abenasxml_abexas.md
---
title: "Continue"
description: |
  !Example(exa.gif 'Example') asXML - Mapping of Elementary Data Types(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_elementary_abexa.htm) !Example(exa.gif 'Example') asXML - Mapping of Structures(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_struc
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_abexas.htm"
abapFile: "abenasxml_abexas.htm"
keywords: ["do", "if", "data", "types", "abenasxml", "abexas"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_trafos.htm) →  [Canonical XML Representation (asXML)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_asxml.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: asXML - Examples of Mappings, ABENASXML_ABEXAS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%
0A%0D%0ASuggestion for improvement:)

asXML - Examples of Mappings

Continue
![Example](exa.gif "Example") [asXML - Mapping of Elementary Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_elementary_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_structure_abexa.htm)
![Example](exa.gif "Example") [asXML - Deserializing Structure Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_asxml_asjson_empty_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_table_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of Anonymous Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_data_object_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_object_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of Qualified Names](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_qnames_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of UUIDs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_mapping_abexa.htm)
![Example](exa.gif "Example") [asXML - Mapping of XML Fragments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_fragments_abexa.htm)
![Example](exa.gif "Example") [asXML - Transformation ID vs. Simple Transformation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_id_vs_st_abexa.htm)